# huang-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README_HTTP_SERVER.md  REDIS_PASSWORD_USAGE.md  config.json  config_postgresql.json  database_manager.cpp  database_manager.h  http_server.cpp  logger.h  main.cpp  redis_manager.cpp  test_classname_fix.sh  test_config.cpp  test_database_switch.cpp  test_http_server.sh  test_logger.sh  test_postgresql.cpp  test_postgresql_error.cpp  test_postgresql_full.cpp  test_redis_password.cpp  test_sqlite.cpp
include/huangh-cpp/: Timer.h  config_manager.h  database_interface.h  database_manager.h  postgresql_database.h  redis_manager.h  sqlite_database.h  student.h
logs/: server_output.txt
src/: collections_example.cpp  config_manager.cpp  database_manager.cpp  http_server.cpp  logger.cpp  postgresql_database.cpp  redis_manager.cpp  sqlite_database.cpp
